--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,9 +36,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/A6.4BusquedaClaveHash
 endorsed.classpath=
 excludes=
+file.reference.TextPrompt.jar=G:\\NetBeans,AndroidStudio,Sitios,HTML\\Programas NetBeans\\LIBRERIAS PARA NETBEANS\\TextPrompt.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.TextPrompt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
